update+swagger+genre
v2
